<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_pot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assignment.pdnguyen.servingsizecalculator.AddPotActivity">

    <TextView
        android:text="@string/pot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/txtvw_potname" />

    <TextView
        android:text="@string/pot_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvw_potweight"
        android:layout_alignBaseline="@+id/edttxt_potweight"
        android:layout_alignBottom="@+id/edttxt_potweight" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edttxt_potweight"
        android:layout_below="@+id/edttxt_potname"
        android:layout_toRightOf="@+id/txtvw_potweight"
        android:layout_toEndOf="@+id/txtvw_potweight"
        android:hint="@string/potweight_hint"
        android:textSize="16sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edttxt_potname"
        android:layout_alignBaseline="@+id/txtvw_potname"
        android:layout_alignBottom="@+id/txtvw_potname"
        android:layout_alignLeft="@+id/edttxt_potweight"
        android:layout_alignStart="@+id/edttxt_potweight"
        android:hint="@string/potname_hint"
        android:textSize="16sp">

        <requestFocus/>
    </EditText>

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edttxt_potweight"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:id="@+id/btn_cancel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_cancel"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_ok"
        android:text="@string/ok" />

</RelativeLayout>
